make dash bord fetching fetures

--- a/src/components/dash/SideBar.astro
+++ b/src/components/dash/SideBar.astro
@@ -29,7 +29,7 @@
 					
 					<li>
 						<a
-							
+							href="/dash/dashboard"
 							class="flex items-center p-2 text-base text-gray-900 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700"
 						>
 							<svg
@@ -39,14 +39,14 @@
 								xmlns="http://www.w3.org/2000/svg"
 								><path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path><path
 									d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path></svg
-							>
-							<span class="ml-3" sidebar-toggle-item>Dashboard</span>
+							>	
+							<span class="ml-3" sidebar-toggle-item>Registed Users</span>
 						</a>
 					</li>
 
 					<li>
 						<a
-							
+							href="/dash/github-users"
 							class="flex items-center p-2 text-base text-gray-900 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700"
 						>
 							<svg
@@ -57,7 +57,7 @@
 								><path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path><path
 									d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path></svg
 							>
-							<span class="ml-3" sidebar-toggle-item>other</span>
+							<span class="ml-3" sidebar-toggle-item>Github Loged users</span>
 						</a>
 					</li>
 					
