--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -80,7 +80,7 @@ const env = import.meta.env;
               
             
               <a
-              href="/dashboard"
+              href="/dash/dashboard"
                
                class="relative flex  h-9 w-full items-center justify-center px-4 before:absolute before:inset-0 before:rounded-full before:bg-info cursor-pointer before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
                >
