--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -1,48 +1,17 @@
 ---
 import Container from "./Container.astro";
 import CardEvent from "./CardEvent.astro";
-
 ---
 
-<div class="pt-32">
-  <Container>
-    <div class="mb-12 space-y-2 text-center">
-      <h2 class="text-3xl font-bold text-gray-800 md:text-4xl">
-        Latest Events
-      </h2>
-      <p class="lg:mx-auto lg:w-6/12 text-gray-600">
-        <!-- give a little description about the latest events -->
-        We have organized a list of world recognized events that you can attend to
-        learn and network with other professionals in the industry.
-      </p>
-    </div>
-
-
-    <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
-      <CardEvent 
-        image="./images/events/SFD1.webp"
-        alt="FOSS Community of NSBM - SFD 2023"
-        title="Software Freedom Day Sri Lanka 2023"
-        body="The Software Freedom Day (SFD) is an annual worldwide celebration of Free Software."
-        url="https://www.facebook.com/foss.nsbm/posts/pfbid02VmHcJ3ZoAPGghZ12v3ziwALkmyP6Z4pjPyCzRKfcnD8LgniG6tp45VYFUuStyhaCl"
-        button_text="Read More" 
-      />
-      <CardEvent 
-        image="./images/events/nmc.webp"
-        alt="art cover"
-        title="Node Meets Cloud | Cloud Session 2023"
-        body="Node Meets Cloud is a Azure Cloud Platform event that hosted by Microstoft Students Ambassadors."
-        url="https://www.facebook.com/foss.nsbm/posts/pfbid02L6PED9FK47uijLzrUfN5Ceb2LT2DiXjfs9t55GppAw3QXkHVgqXAfVbLqY5yzNTAl"
-        button_text="Read More" 
-      />
-      <CardEvent 
-        image="./images/events/technosphere.webp"
-        alt="art cover"
-        title="Technosphere | Tech Conference 2022"
-        body="Technosphere is a tech conference that brings together the best and brightest minds in the tech industry."
-        url="https://www.facebook.com/foss.nsbm"
-        button_text="Read More" 
-      />      
-    </div> 
+<div class="pt-32 flex justify-center">
+  <Container><div class="h-screen w-full  justify-center items-center">
+    <h1>Welcome To The Foss Community 
+    click here to our cotributuinn plat fom
+    and make sure llog in same git hub email if not you will not be able to access the project management</h1>
+     <div> <a href="https://huly.app/workbench/dialectic/tracker/all-projects" class="inline-block bg-gradient-to-r from-teal-400 to-blue-500 text-white text-lg font-semibold py-3 px-8 rounded-full shadow-lg transform transition-all hover:scale-105 hover:from-teal-500 hover:to-blue-600 hover:shadow-2xl">
+      Access Project Management
+    </a>
+  </div>
+  </div>
   </Container>
 </div>
