final one fix all

--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -2,50 +2,46 @@
 import Container from "./Container.astro";
 ---
 
-<footer class="py-20 md:py-40 flex items-center justify-center w-full ">
-  <div class="flex felx-col items-center justify-center w-full">
-  <div class="flex items-center justify-around w-full ">
-    <div class="">
-      <img src="/public//images/communities/foss.webp" alt="" width="60px">
-      <div>
-        {`</>`} with 🖤
-        FOSS Community of NSBM © 2024
+<footer class="py-20 md:py-40 flex items-center justify-center w-full">
+  <div class="flex flex-col items-center justify-center w-full">
+    <div class="flex flex-col md:flex-row items-center justify-around w-full text-center md:text-left">
+      <div class="flex flex-col items-center md:items-start">
+        <img src="/public/images/communities/foss.webp" alt="FOSS Community Logo" width="60px" />
+        <div class="mt-2">
+          {`</>`} with 🖤 FOSS Community of NSBM © 2024
+        </div>
+      </div>
+
+      <div class="flex flex-wrap justify-center gap-4 mt-8 md:mt-0">
+        <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
+          <img src="https://img.icons8.com/?size=100&id=62856&format=png&color=000000" width="25" alt="Github" />
+          Github
+        </a>
+        <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
+          <img src="https://img.icons8.com/?size=100&id=111056&format=png&color=000000" width="25" alt="X" />
+          X
+        </a>
+        <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
+          <img src="https://img.icons8.com/?size=100&id=98960&format=png&color=000000" width="25" alt="LinkedIn" />
+          LinkedIn
+        </a>
+        <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
+          <img src="https://img.icons8.com/?size=100&id=37325&format=png&color=000000" width="25" alt="Youtube" />
+          Youtube
+        </a>
+        <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
+          <img src="https://img.icons8.com/?size=100&id=118467&format=png&color=000000" width="25" alt="Facebook" />
+          Facebook
+        </a>
+        <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
+          <img src="https://img.icons8.com/?size=100&id=XVNvUWCvvlD9&format=png&color=000000000000" width="25" alt="Medium" />
+          Medium
+        </a>
+        <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
+          <img src="https://img.icons8.com/?size=100&id=32309&format=png&color=000000" width="25" alt="Instagram" />
+          Instagram
+        </a>
       </div>
     </div>
-    <div class="flex flex-col gap-4">
-      <li><a href="">Home</a></li>
-      <li><a href="">About</a></li>
-      <li><a href="">Events</a></li>
-      <li><a href="">Become an Volunteer</a></li>
-      <li><a href="">Contact Us</a></li>
-    </div>
-    <div class="flex flex-col items-center justify-center gap-4">
-      <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
-        <img src="https://img.icons8.com/?size=100&id=62856&format=png&color=000000" width="25" alt="">Github
-      </a>
-      <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
-        <img src="https://img.icons8.com/?size=100&id=111056&format=png&color=000000" width="25" alt="">X
-      </a>
-      <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
-        <img src="https://img.icons8.com/?size=100&id=98960&format=png&color=000000" width="25" alt="">LinkedIn
-      </a>
-      <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
-        <img src="https://img.icons8.com/?size=100&id=37325&format=png&color=000000" width="25" alt="">Youtube
-      </a>
-      <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
-        <img src="https://img.icons8.com/?size=100&id=118467&format=png&color=000000" width="25" alt="">Facebook
-      </a>
-      <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
-        <img src="https://img.icons8.com/?size=100&id=XVNvUWCvvlD9&format=png&color=000000000000" width="25" alt="">Medium
-      </a>
-      <a href="https://icons8.com/icons/set/github" class="flex items-center gap-2">
-        <img src="https://img.icons8.com/?size=100&id=32309&format=png&color=000000" width="25" alt="">Instagram
-      </a>
-    </div>
-    
-  </div>
-  <!-- <div>
-    base line
-  </div> -->
   </div>
 </footer>
