--- a/src/components/dash/NavBarSidebar.astro
+++ b/src/components/dash/NavBarSidebar.astro
@@ -55,7 +55,18 @@ import {SignOut} from "auth-astro/components";
 			</div>
 			<div>
 			<SignOut>
-			<p>logout</p>
+				<a
+				href="/login"
+			   
+				 class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-red-700 before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
+				 data-astro-transition
+				 
+				 >
+	 
+				 <span class="relative text-base font-semibold text-white"
+				   >Log Out</span >
+			   </a>
+			
 			</SignOut>
 				
 			</div>
