--- a/src/pages/Acess.astro
+++ b/src/pages/Acess.astro
@@ -2,7 +2,7 @@
 import AppFooter from "../components/AppFooter.astro";
 import AppHeader from "../components/AppHeader.astro";
 import RegisterCard from "../components/RegisterCard.astro";
-import  Event_section  from "../components/Events.astro";
+import  Event_section  from "../components/Accessbut.astro";
 import { getSession } from "auth-astro/server";
 import { sql } from "../lib/neon";
 const session = await getSession(Astro.request);
