--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -17,7 +17,7 @@ if (session && session.user) {
     
     if (emailExists[0].count > 0) {
       console.log("Email is already registered.");
-      return Astro.redirect('/event');  
+      return Astro.redirect('/Acess');  
     }
 
   
